cmake_minimum_required(VERSION 3.26)
project(TP_POO_2425)

set(CMAKE_CXX_STANDARD 20)

add_executable(TP_POO_2425 main.cpp
        Buffer.cpp
        Buffer.h
        Mapa.h
        Mapa.cpp
        Caravana.cpp
        Caravana.h
        Item.cpp
        Item.h
        Cidade.h
        Cidade.cpp
        ExecComandos.h
        ExecComandos.cpp
)
